home page & service page changed

--- a/services.html
+++ b/services.html
@@ -91,7 +91,7 @@
     <!-- end navbar -->
 
     <!-- pageheader -->
-    <section class="pt-4 pb-4 pb-lg-8">
+    <section class="pt-4 pb-4 pb-lg-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -103,7 +103,7 @@
                         </ol>
                     </nav>
                     <div class="mt-4">
-                        <h1 class="display-6 fw-semi-bold">Services</h1>
+                        <h2 class="fw-semi-bold">LAND AND PROPERTY DISPUTES</h2>
                     </div>
                 </div>
             </div>
@@ -112,7 +112,7 @@
     <!-- pageheader-->
 
     <!-- who we are -->
-    <section class="py-lg-5 py-6">
+    <!-- <section class="py-lg-5 py-6">
         <div class="container">
             <div class="row align-items-center mb-lg-5 mb-5">
                 <div class="col-lg-6 col-md-12 col-12">
@@ -179,7 +179,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- who we are -->
 
     <!-- Our Services Content -->
@@ -187,32 +187,148 @@
     <section class="py-lg-5 py-6">
         <div class="container">
             <div class="row align-items-center mb-lg-5 mb-5">
-                <div class="col-lg-12 col-md-12 col-12">
-                    <div class="service-content">
-                        <h2>TRESPASSING OR CLAIMING POSSESSION OF THE PROPERTY</h2>
-                        <p>Possession is stated as points of ownership as per law. It is important for any owner of the property to keep the possessory rights with him. In situations where the owner is residing outside the city or country; protecting the property becomes a primal concern. Therefore the property is either given to a friend, relative or tenant to ensure the property is intact in the absence of the owner. It becomes a cause of concern when the owner wishes to return to the property and the occupant refuses to vacate.
-                            Can the owner do anything about it or just let go of his property created or inherited to the unscrupulous relatives or friends?? The owner has the complete legal rights to approach the court of law through a property dispute lawyer for seeking the possession of his house. Whether a suit for eviction or possession or Suit of Mandatory Injunction will totally depend on the facts of the case. Additionally, profits for illegal occupation must also be claimed through the court.
-                            The other aspect if any person who has illegally entered your property. It is called trespassing. The owner of the property not only has the right to file a case in court but also file a criminal complaint against such a trespasser.
-                        </p>
-                        <h2>To avoid Land and Property Disputes it is important for such owners especially persons residing abroad (NRI or PIO) or a house owner living in a different city:</h2>
-                        <ol>
-                            <li>Being an owner of a house where it is decided to give the house to a relative or a friend only for purposes of caretaking; the owner must enter into a properly drafted agreement that of a caretaker to be categoric as to the rights of the caretaker and that at any stage he cannot take undue advantage of your absence.</li>
-                            <li>If the house is given to a tenant; enter into a rent agreement and the rent must be deposited into the bank accounts.</li>
-                            <li>No power of attorney or any blank documents to be signed and handed over to the relative or friend.</li>
-                            <li>It is most important that the ownership documents such as the registered deeds and documents of the property are in your custody. PLEASE DO NOT HAND THESE DOCUMENTS TO ANY PERSON. Ensure you visit or have some person visit the property regularly.</li>
-                        </ol>
-                        <h2>CLAIMING OWNERSHIP OF THE PROPERTY</h2>
-                        <p>Circumstances occur quite often where your own blood or the closest friend or maybe a third party taking advantage of the faith and trust reposed in them; claim ownership of the property (house/land) which lead to a land and property dispute. The claim could be based on any of the following:</p>
-                        <ol>
-                            <li>An alleged Will</li>
-                            <li>Deeds executed by a power of attorney</li>
-                            <li>Forged agreements</li>
-                            <li>False facts and documents submitted to government authorities</li>
-                        </ol>
-                        <h2>AN ALLEGED WILL</h2>
-                        <p>On the death of a person; as per law, it is his children, widow, and mother who inherit the property in equal shares unless there is a Will left by the deceased. Each child or heir or another party might want the assets solely in their name or maybe unequally distributed based on a Will.
-
-                            There are many cases in the past that we have seen where false Wills have been created by parties trying to usurp the share of their brothers and sisters or other family members. However, such a Will if comes into the knowledge of the testator himself can cancel it. If such a false or fabricated document is propounded by the beneficiary after the death of the owner of the property, the aggrieved must immediately on attaining knowledge approach the competent court seeking appropriate orders have the Will set aside.</p>
+                <div class="col-lg-9 col-md-12 col-12">
+                    <ul class="nav nav-pills mb-2 justify-content-lg-between" id="pills-tab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                          <button class="nav-link active px-5" id="pills-overview-tab" data-bs-toggle="pill" data-bs-target="#pills-overview" type="button" role="tab" aria-controls="pills-overview" aria-selected="true">OVERVIEW</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                          <button class="nav-link px-5" id="pills-documents-tab" data-bs-toggle="pill" data-bs-target="#pills-documents" type="button" role="tab" aria-controls="pills-documents" aria-selected="false">DOCUMENTS</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                          <button class="nav-link px-5" id="pills-payement-tab" data-bs-toggle="pill" data-bs-target="#pills-payement" type="button" role="tab" aria-controls="pills-payement" aria-selected="false">PAYMENTS</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                          <button class="nav-link px-5" id="pills-faq-tab" data-bs-toggle="pill" data-bs-target="#pills-faq" type="button" role="tab" aria-controls="pills-faq" aria-selected="false">FAQS</button>
+                        </li>
+                      </ul>
+                      <div class="tab-content bg-secondary-subtle" id="pills-tabContent">
+                        <div class="tab-pane fade show active" id="pills-overview" role="tabpanel" aria-labelledby="pills-overview-tab" tabindex="0">
+                            <div class="content-header">Overview</div>
+                            <div class="content-text p-5">
+                                <p>If the real estate company is in poor financial condition and is unable to continue or finish the concerned real estate project, home-buyers can initiate insolvency proceedings in the National Company Law Tribunal.
+                                    Before initiating insolvency proceedings, sending a legal notice to the builder serves as a final warning. In case a settlement is still not reached, you should then file the application for initiating insolvency process.
+                                </p>
+                                <h3>Steps involved in a RERA complaint</h3>
+                                <ol class="my-4">
+                                    <h4>DOCUMENT VERIFICATION</h4>
+                                    <li>You will be required to share scanned copies of documents related to the property for verification by a lawyer</li>
+                                    <h4 class="mt-3">COMPLAINT DRAFTING</h4>
+                                    <li>Within 10 days of receiving your documents, the lawyer will draft and share the complaint copy for your review</li>
+                                    <h4 class="mt-3">FILING OF COMPLAINT</h4>
+                                    <li>The application will be filed before the NCLT within 3 working days of approval of the draft</li>
+                                    <h4 class="mt-3">REPLY</h4>
+                                    <li>The builder will file a reply to your complaint</li>
+                                    <h4 class="mt-3">HEARING AND ARGUMENTS</h4>
+                                    <li>RERA will conduct hearings in the matter. MyAdvo will update you after every hearing</li>
+                                    <h4 class="mt-3">JUDGMENT</h4>
+                                    <li>RERA will issue a final order after the hearing and arguments</li>
+                                    <h4 class="mt-3">EXECUTION</h4>
+                                    <li>In case of non-compliance of judgment by the builder, execution proceedings will be initiated for attachment of builder’s assets</li>
+                                </ol>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="pills-documents" role="tabpanel" aria-labelledby="pills-documents-tab" tabindex="0">
+                            <div class="content-header">Required Documents</div>
+                            <div class="content-text p-5">
+                                <ol class="my-4">
+                                    <li>Application for buying of property in the Project</li>
+                                    <li>Builder-Buyer Agreement</li>
+                                    <li>Receipts/Proof of payments made to the builder</li>
+                                    <li>Letters/ email correspondences between the Buyer and the Builder</li>
+                                    <li>Brochure of the Project</li>
+                                    <li>Letter of Allotment</li>
+                                </ol>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="pills-payement" role="tabpanel" aria-labelledby="pills-payement-tab" tabindex="0">
+                            <div class="content-header">Payment Structure</div>
+                            <div class="content-text p-5">
+                                <h4>Without Execution</h4>
+                                <ol class="my-4">
+                                    <li>You are required to pay 60% of the case fee to start the work</li>
+                                    <li>40% is payable after getting the final order</li>
+                                </ol>
+                                <h4>With Execution</h4>
+                                <ol class="my-4">
+                                    <li>You are required to pay 60% of the case fee to start the work</li>
+                                    <li>20% upon getting the final order</li>
+                                    <li>20% upon receiving RC (Recovery Certificate)</li>
+                                </ol>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="pills-faq" role="tabpanel" aria-labelledby="pills-faq-tab" tabindex="0">
+                            <div class="content-header">Frequently Asked Questions</div>
+                            <div class="content-text p-5">
+                                <div class="accordion accordion-flush" id="accordionFlushExample">
+                                    <div class="accordion-item px-3 my-3">
+                                      <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                            What is RERA?
+                                        </button>
+                                      </h2>
+                                      <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">RERA Stands for Real Estate (Regulation and Development) Act, 2016. The word RERA is also used to denote the Real Estate Regulatory Authority. As per the act, every state and union territory in India has to set up a RERA authority. It’s an initiative by the Indian Government in the real estate sector. The Act aims to set up a Real Estate Regulatory Authority (hereafter, ‘RERA’) to ensure speedy justice to home buyers. The Act is designed to ensure timely recovery of money or possession of the property to the buyers, against the builder.</div>
+                                      </div>
+                                    </div>
+                                    <div class="accordion-item px-3 my-3">
+                                      <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                            Where RERA is applicable?
+                                        </button>
+                                      </h2>
+                                      <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">The Real Estate Act 2016 applies to all commercial and residential projects where-
+                                            <ol>
+                                                <li>The land is over 500 square meters,</li>
+                                                <li>More than eight apartments are to be developed</li>
+                                                <li>Ongoing projects which have not received completion certificate on the date of commencement of the RERA Act.</li>
+                                                <li>If a real estate developer fails to register a project within three months, the RERA authority</li>
+                                            </ol>
+                                        </div>
+                                      </div>
+                                    </div>
+                                    <div class="accordion-item px-3 my-3">
+                                      <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                            Why is RERA made? What are the objectives?
+                                        </button>
+                                      </h2>
+                                      <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">RERA or Real estate development act 2016 was the need of the hour. In the absence of a sector-specific law, the Indian real estate sector suffered from corruption and a lack of transparency.
+                                            RERA takes care of consumer interests and brings discipline in the real estate sector. RERA has the following broad objectives -
+                                            <ol>
+                                                <li>Bring transparency in the real estate sector.</li>
+                                                <li>Protect consumer interest by ensuring the time-bound delivery of real estate projects.</li>
+                                                <li>Single forum to handle real estate disputes.</li>
+                                                <li>Bring standardization in the real estate sector</li>
+                                            </ol>
+                                            <p>Ensuring accountability of the builders /developers /Agents /promoters.</p>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                            </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-lg-3 col-md-12 col-12">
+                    <div class="floating-card bg-secondary-subtle">
+                        <div class="d-flex gap-2 w-100 justify-content-between">
+                            <div>
+                              <h3 class="mb-0">Consultation Price</h3>
+                            </div>
+                            <h3 class="text-nowrap">₹2,000</h3>
+                          </div>
+                          <p class="my-3">Pay securely with major Credit and Debit cards, online Wallets and UPI</p>
+                          <a href="#" class="btn btn-primary bg-gold border-0 w-100">Book Consultation</a>
+                          <ul class="my-3">
+                            <li>1,200+ Cases Filed in RERA</li>
+                            <li>Fixed One-time Quote</li>
+                            <li>24X7 Customer Support</li>
+                            <li>2,500+ Verified Property Lawyers</li>
+                            <li>Timely Delivery of Case</li>
+                          </ul>
                     </div>
                 </div>
             </div>
@@ -220,30 +336,6 @@
     </section>
 
     <!-- End Of Our Services Content -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <!-- footer -->
 
